Bug 267421 - Tagging panel shows tags as checked which previously where partially checked (when selecting multiple images)
Summary: Tagging panel shows tags as checked which previously where partially checked ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.8.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-02 00:54 UTC by Bastiaan Hovestreydt
Modified: 2012-06-27 10:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastiaan Hovestreydt 2011-03-02 00:54:05 UTC
Version:           1.8.0 (using KDE 4.6.0) 
OS:                Linux

When selecting multiple images the right tagging panel (Caption/Tags -> Description) shows items as checked, which in previous versions where partially checked. There is now no observable difference anymore between tags assigned to all and tags assigned to some selected images.
I suppose this change is not intentional because I can't see any advantages in the new behavior.

Reproducible: Always

Steps to Reproduce:
Select multiple images which not all have the same tags.

Actual Results:  
All occurring tags are shown as checked.

Expected Results:  
The tags that are assigned to all images in the selection should be checked. The tags that are only assigned to some of the selected images should be partially checked.

Prior to 1.7.0 or 1.8.0 the behavior in digiKam was as expected. I found it quite useful (in combination with the "Tags already assigned" switch) to get an overview over the assigned tags or to copy some tags over from one image to all in the selection.
Comment 1 Marcel Wiesweg 2011-04-17 15:38:05 UTC
This is a regression introduced by 60f14bed01d9f3125c09f24006e5f8804ca21d4f, bug 141753.
Comment 2 Marcel Wiesweg 2011-04-17 16:41:56 UTC
Git commit 434fc7e9410bc4866a31d78661699fc8745af45b by Marcel Wiesweg.
Committed on 17/04/2011 at 16:45.
Pushed by mwiesweg into branch 'master'.

Fix a regression introduced by the ability-to-exclude-tags patch, and make some stuff work (again):
- use a special "add exclude" mode only enabled in models that need it. Fixes regression 267421
  (partial check state treated as fully checked)
- albumDecorationRole is overridden by derived classes, so there is no sense in doing the overlay
  painting in this method in the parent class. Provide a tool method which is called from the children,
  now the + or - is visible.

CCBUG: 141753
BUG: 267421

M  +2    -1    NEWS     
M  +1    -2    digikam/models/digikammodelcollection.cpp     
M  +42   -23   libs/models/abstractalbummodel.cpp     
M  +16   -1    libs/models/abstractalbummodel.h     
M  +6    -2    libs/models/albummodel.cpp     

http://commits.kde.org/digikam/434fc7e9410bc4866a31d78661699fc8745af45b