Fix a regression introduced by the ability-to-exclude-tags patch, and make some stuff work (again): - use a special "add exclude" mode only enabled in models that need it. Fixes regression 267421   (partial check state treated as fully checked) - albumDecorationRole is overridden by derived classes, so there is no sense in doing the overlay   painting in this method in the parent class. Provide a tool method which is called from the children,   now the + or - is visible.

CCBUG: 141753
BUG: 267421