digikam/models/digikammodelcollection.cpp
@@ -64,8 +64,7 @@ DigikamModelCollection::DigikamModelCollection() :
     d->albumModel     = new AlbumModel(AlbumModel::IncludeRootAlbum);
     d->tagModel       = new TagModel(AbstractAlbumModel::IncludeRootAlbum);
     d->tagFilterModel = new TagModel(AbstractAlbumModel::IgnoreRootAlbum);
-    d->tagFilterModel->setCheckable(true);
-    d->tagFilterModel->setTristate(true);
+    d->tagFilterModel->setAddExcludeTristate(true);
 
     d->searchModel       = new SearchModel();
     d->dateAlbumModel    = new DateAlbumModel();
